--- a/index.html
+++ b/index.html
@@ -50,12 +50,9 @@
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                    	<h1><img src="images/logo.gif"alt="logo" style="
-                            width: 250px;
-                        "></h1>
+                    	<h1><img src="images/logo.gif"alt="logo"></h1>
                     </a>
-                    
-                </div>
+                    </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="index.html">Inicio</a></li>
