--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
+                        <span class="sr-only">#</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -89,7 +89,7 @@
                 <div class="slide-text">
                     <h1>Diário de uma Quarentena</h1>
                     <p>Comecei a escrever o livro “Diário de uma quarentena” após ter escrito a carta para meu tio que pegou Covid-19. Aqui, na minha casa, todos estavam aflitos com essa situação do meu tio e para mim não estava bem em ver tudo isso, então, resolvi escrever para compartilhar.</p>
-                    <a href="#" class="btn btn-common">Compre agora!</a>
+                    <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Compre agora!</a>
                 </div>
                 <img src="images/home/slider/slide1/house.png" class="img-responsive slider-house" alt="slider image">
                 <img src="images/home/slider/slide1/cloud2.png" class="slider-cloud2" alt="slider image">
@@ -114,7 +114,7 @@
                         </div>
                         <h2>Português</h2>
                         <p>Narrativas de uma criança no seu primeiro período na pandemia.</p>
-                        <a href="#" class="btn btn-common">Compre agora!</a>
+                        <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Compre agora!</a>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
@@ -127,7 +127,7 @@
                         </div>
                         <h2>English</h2>
                         <p>Narratives of a child in his first period in the pandemic.</p>
-                        <a href="#" class="btn btn-common">Buy now!</a>
+                        <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Buy now!</a>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
@@ -294,15 +294,15 @@
                 <div class="col-md-4 col-sm-12">
                     <div class="contact-form bottom">
                         <h2>Envie uma mensagem</h2>
-                        <form id="main-contact-form" name="contact-form" method="post" action="sendemail.php">
+                        <form action="https://formsquash.io/f/noRBAwYtRlM40W4kRt61" method="POST">>
                             <div class="form-group">
-                                <input type="text" name="name" class="form-control" required="required" placeholder="Nome">
+                                <input type="text" name="nome" class="form-control"  placeholder="Nome">
                             </div>
                             <div class="form-group">
-                                <input type="email" name="email" class="form-control" required="required" placeholder="E-mail">
+                                <input type="email" name="email" class="form-control"  placeholder="E-mail">
                             </div>
                             <div class="form-group">
-                                <textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Escreva aqui a sua mensagem"></textarea>
+                                <textarea name="messagem" id="messagem"  class="form-control" rows="8" placeholder="Escreva aqui a sua mensagem"></textarea>
                             </div>                        
                             <div class="form-group">
                                 <input type="submit" name="submit" class="btn btn-submit" value="Enviar">
