--- a/blogtwo.html
+++ b/blogtwo.html
@@ -50,9 +50,7 @@
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <h1><img src="images/logo.gif" alt="logo" style="
-                            width: 250px;
-                        "></h1>
+                        <h1><img src="images/logo.gif" alt="logo"></h1>
                     </a>
                     
                 </div>
