--- a/aboutus.html
+++ b/aboutus.html
@@ -401,7 +401,7 @@
                 <div class="col-md-4 col-sm-12">
                     <div class="contact-form bottom">
                         <h2>Envie uma mensagem</h2>
-                        <form action="https://formsquash.io/f/noRBAwYtRlM40W4kRt61" method="POST">>
+                        <form action="https://formsquash.io/f/noRBAwYtRlM40W4kRt61" method="POST">
                             <div class="form-group">
                                 <input type="text" name="nome" class="form-control"  placeholder="Nome">
                             </div>
