--- a/blogtwo.html
+++ b/blogtwo.html
@@ -265,7 +265,7 @@
                     <div class="contact-info bottom">
                         <h2>Contato</h2>
                         <address>
-                        E-mail: <a href="mailto:someone@example.com">producaoyalletarique@gmail.com</a> <br> 
+                        E-mail: <a href="producaoyalletarique@gmail.com">producaoyalletarique@gmail.com</a> <br> 
                         Telefone: +55 (71) 99222-7144<br> 
                         </address>
 
@@ -279,15 +279,15 @@
                 <div class="col-md-4 col-sm-12">
                     <div class="contact-form bottom">
                         <h2>Envie uma mensagem</h2>
-                        <form id="main-contact-form" name="contact-form" method="post" action="sendemail.php">
+                        <form action="https://formsquash.io/f/noRBAwYtRlM40W4kRt61" method="POST">>
                             <div class="form-group">
-                                <input type="text" name="name" class="form-control" required="required" placeholder="Nome">
+                                <input type="text" name="nome" class="form-control"  placeholder="Nome">
                             </div>
                             <div class="form-group">
-                                <input type="email" name="email" class="form-control" required="required" placeholder="E-mail">
+                                <input type="email" name="email" class="form-control"  placeholder="E-mail">
                             </div>
                             <div class="form-group">
-                                <textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Escreva aqui a sua mensagem"></textarea>
+                                <textarea name="messagem" id="messagem"  class="form-control" rows="8" placeholder="Escreva aqui a sua mensagem"></textarea>
                             </div>                        
                             <div class="form-group">
                                 <input type="submit" name="submit" class="btn btn-submit" value="Enviar">
