--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                    <div class="social-icons pull-right">
                         <ul class="nav nav-pills">
                             <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fa fa-instagram"></i></a></li>
                             <li><a href=""><i class="fa fa-google-plus"></i></a></li>
                            </ul>
                     </div> 
