--- a/blogtwo.html
+++ b/blogtwo.html
@@ -32,7 +32,7 @@
                    <div class="social-icons pull-right">
                         <ul class="nav nav-pills">
                             <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fa fa-instagram"></i></a></li>
                             <li><a href=""><i class="fa fa-google-plus"></i></a></li>
                           </ul>
                     </div> 
@@ -246,7 +246,7 @@
                                 <a href="#"><img src="images/home/profile1.png" alt=""></a>
                             </div>
                             <div class="media-body">
-                                <blockquote>Como sua mãe, fico muito feliz em ver a motivação dele, esta iniciativa surgiu de sua própria vontade e passamos a incentivar está escrita diária sobre os seus sentimentos durante a quarentena.</blockquote>
+                                <blockquote>Como sua mãe, fico muito feliz em ver a motivação dele, esta iniciativa surgiu de sua própria vontade e passamos a incentivar esta escrita diária sobre os seus sentimentos durante a quarentena.</blockquote>
                                 <h3><a href="#">-Rebeca Tárique</a></h3>
                             </div>
                          </div>
