--- a/index.html
+++ b/index.html
@@ -146,9 +146,55 @@
             </div>
         </div>
     </section>
-    <!--/#services-->
+     <!--/#home-slider-->
 
-    <section id="action" class="responsive">
+     <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="300ms">
+                    <div class="single-service">
+                        <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="300ms">
+                            <img src="images/home/icon1.png" alt="" style="
+                            width: 230px;
+                            height: 220px;
+                        ">
+                        </div>
+                        <h2>Português</h2>
+                        <p>Narrativas de uma criança no seu primeiro período na pandemia.</p>
+                        <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Compre agora!</a>
+                    </div>
+                </div>
+                <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
+                    <div class="single-service">
+                        <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="600ms">
+                            <img src="images/home/icon2.png" alt="" style="
+                            width: 230px;
+                            height: 220px;
+                        ">
+                        </div>
+                        <h2>English</h2>
+                        <p>Narratives of a child in his first period in the pandemic.</p>
+                        <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Buy now!</a>
+                    </div>
+                </div>
+                <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
+                    <div class="single-service">
+                        <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="900ms">
+                            <img src="images/home/icon3.png" alt="" style="
+                            width: 230px;
+                            height: 220px;
+                        ">
+                        </div>
+                        <h2>Spanish</h2>
+                        <p>Narraciones de un niño en su primer período en la pandemia.</p>
+                        <a href="#" class="btn btn-common">Compre ahora!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--/#services-->
+       <section id="action" class="responsive">
         <div class="vertical-center">
              <div class="container">
                 <div class="row">
