--- a/index.html
+++ b/index.html
@@ -107,40 +107,43 @@
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="300ms">
                     <div class="single-service">
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="300ms">
-                            <img src="images/home/icon1.png" alt="" style="
+                            <img src="images/home/icon4.png" alt="" style="
                             width: 230px;
                             height: 220px;
                         ">
                         </div>
-                        <h2>Português</h2>
-                        <p>Narrativas de uma criança no seu primeiro período na pandemia.</p>
+                        <h2>Combo</h2>
+                        <p>Livro + Caneca - Diário de uma quarentena.</p>
+                        <h3>R$99,90</h3>
                         <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Compre agora!</a>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
                     <div class="single-service">
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="600ms">
-                            <img src="images/home/icon2.png" alt="" style="
+                            <img src="images/home/icon6.png" alt="" style="
                             width: 230px;
                             height: 220px;
                         ">
                         </div>
-                        <h2>English</h2>
-                        <p>Narratives of a child in his first period in the pandemic.</p>
-                        <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Buy now!</a>
+                        <h2>Caneca Personalizada</h2>
+                        <p> Diário de uma quarentena</p>
+                        <h3>R$69,90</h3>
+                        <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Compre agora!</a>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
                     <div class="single-service">
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="900ms">
-                            <img src="images/home/icon3.png" alt="" style="
+                            <img src="images/home/icon5.png" alt="" style="
                             width: 230px;
                             height: 220px;
                         ">
                         </div>
-                        <h2>Spanish</h2>
-                        <p>Narraciones de un niño en su primer período en la pandemia.</p>
-                        <a href="#" class="btn btn-common">Compre ahora!</a>
+                        <h2>Bloco de Notas</h2>
+                        <p>Diário de uma Quarentena</p>
+                        <h3>R$32,90</h3>
+                        <a href="#" class="btn btn-common">Compre agora!</a>
                     </div>
                 </div>
             </div>
@@ -161,6 +164,7 @@
                         </div>
                         <h2>Português</h2>
                         <p>Narrativas de uma criança no seu primeiro período na pandemia.</p>
+                        <h3>R$39,90</h3>
                         <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Compre agora!</a>
                     </div>
                 </div>
@@ -174,6 +178,7 @@
                         </div>
                         <h2>English</h2>
                         <p>Narratives of a child in his first period in the pandemic.</p>
+                        <h3>R$39,90</h3>
                         <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Buy now!</a>
                     </div>
                 </div>
@@ -187,6 +192,7 @@
                         </div>
                         <h2>Spanish</h2>
                         <p>Narraciones de un niño en su primer período en la pandemia.</p>
+                        <h3>R$39,90</h3>
                         <a href="#" class="btn btn-common">Compre ahora!</a>
                     </div>
                 </div>
