--- a/blogtwo.html
+++ b/blogtwo.html
@@ -31,9 +31,9 @@
                 <div class="col-sm-12 overflow">
                    <div class="social-icons pull-right">
                         <ul class="nav nav-pills">
-                            <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                            <li><a href=""><i class="fa fa-instagram"></i></a></li>
-                            <li><a href=""><i class="fa fa-google-plus"></i></a></li>
+                            <li><a href="https://www.facebook.com/yalletarique/"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.instagram.com/yalletarique/?hl=pt-br"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.google.com/?hl=pt_BR"><i class="fa fa-google-plus"></i></a></li>
                           </ul>
                     </div> 
                 </div>
