--- a/blogtwo.html
+++ b/blogtwo.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
+                        <span class="sr-only">#</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -231,6 +231,16 @@
         </div>
     </section>
     <!--/#blog-->
+    <center style="
+    height: 520px;
+"><div class="container" style="
+    padding-left: 10px;
+    padding-right: 90px;
+    border-left-width: 500px;
+    border-right-width: 500px;
+    width: 450px;
+    height: 480px;
+"><iframe class="instagram-media instagram-media-rendered" id="instagram-embed-25" src="https://www.instagram.com/p/CMXM0HuhrSl/embed/captioned/?v=7" allowtransparency="true" frameborder="0" height="436" data-instgrm-payload-id="instagram-media-payload-25" scrolling="no" style="postion:relative; border: 0px; margin: 0 auto; max-width: 500px; width: 375px; height:473px; border-radius: 4px; box-shadow: rgba(0, 0, 0, 0.498039) 0px 0px 1px 0px, rgba(0, 0, 0, 0.14902) 0px 1px 10px 0px; display: block; padding: 0px; background: rgb(255, 255, 255);"></iframe></div></center>
 
     <footer id="footer">
         <div class="container">
@@ -279,7 +289,7 @@
                 <div class="col-md-4 col-sm-12">
                     <div class="contact-form bottom">
                         <h2>Envie uma mensagem</h2>
-                        <form action="https://formsquash.io/f/noRBAwYtRlM40W4kRt61" method="POST">>
+                        <form action="https://formsquash.io/f/noRBAwYtRlM40W4kRt61" method="POST">
                             <div class="form-group">
                                 <input type="text" name="nome" class="form-control"  placeholder="Nome">
                             </div>
