--- a/aboutus.html
+++ b/aboutus.html
@@ -172,7 +172,7 @@
                         </div>
                         <div class="col-sm-5 text-center wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
                             <div class="tour-button">
-                                <a href="#" class="btn btn-common">Visitar Amazon</a>
+                                <a href="https://www.amazon.com.br/Di%C3%A1rio-uma-quarentena-Narrativas-Pandemia-ebook/dp/B08Y68HQY2/ref=sr_1_7?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=O+Diario+de+uma+quarentena&qid=1615672905&s=books&sr=1-7" class="btn btn-common">Visitar Amazon</a>
                              </div>
                         </div>
                     </div>
