--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <h2>Combo</h2>
                         <p>Livro + Caneca - Diário de uma quarentena.</p>
                         <h3>R$99,90</h3>
-                        <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Compre agora!</a>
+                        <a href="https://sacola.pagseguro.uol.com.br/abaa4cb9-2360-436b-a996-f3ade294d50f" class="btn btn-common">Compre agora!</a>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
@@ -129,7 +129,7 @@
                         <h2>Caneca Personalizada</h2>
                         <p> Diário de uma quarentena</p>
                         <h3>R$69,90</h3>
-                        <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Compre agora!</a>
+                        <a href="https://sacola.pagseguro.uol.com.br/ee8e45ac-2d5c-4d07-9665-82144e34ef51" class="btn btn-common">Compre agora!</a>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
@@ -143,7 +143,7 @@
                         <h2>Bloco de Notas</h2>
                         <p>Diário de uma Quarentena</p>
                         <h3>R$32,90</h3>
-                        <a href="#" class="btn btn-common">Compre agora!</a>
+                        <a href="https://sacola.pagseguro.uol.com.br/38dedbe1-3a1f-4dce-8cdc-553eebc9d083" class="btn btn-common">Compre agora!</a>
                     </div>
                 </div>
             </div>
@@ -165,7 +165,7 @@
                         <h2>Português</h2>
                         <p>Narrativas de uma criança no seu primeiro período na pandemia.</p>
                         <h3>R$39,90</h3>
-                        <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Compre agora!</a>
+                        <a href="https://sacola.pagseguro.uol.com.br/05ee6ccb-2be9-4a90-ab52-fc88cdb68b5a" class="btn btn-common">Compre agora!</a>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
@@ -179,7 +179,7 @@
                         <h2>English</h2>
                         <p>Narratives of a child in his first period in the pandemic.</p>
                         <h3>R$39,90</h3>
-                        <a href="https://sacola.pagseguro.uol.com.br/5d882947-d3b3-4c75-8673-a93192de66e5" class="btn btn-common">Buy now!</a>
+                        <a href="https://sacola.pagseguro.uol.com.br/05ee6ccb-2be9-4a90-ab52-fc88cdb68b5a" class="btn btn-common">Buy now!</a>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
@@ -193,7 +193,7 @@
                         <h2>Spanish</h2>
                         <p>Narraciones de un niño en su primer período en la pandemia.</p>
                         <h3>R$39,90</h3>
-                        <a href="#" class="btn btn-common">Compre ahora!</a>
+                        <a href="https://sacola.pagseguro.uol.com.br/05ee6ccb-2be9-4a90-ab52-fc88cdb68b5a" class="btn btn-common">Compre ahora!</a>
                     </div>
                 </div>
             </div>
@@ -211,7 +211,7 @@
                         </div>
                         <div class="col-sm-5 text-center wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
                             <div class="tour-button">
-                                <a href="#" class="btn btn-common">Visitar Amazon</a>
+                                <a href="https://www.amazon.com.br/Di%C3%A1rio-uma-quarentena-Narrativas-Pandemia-ebook/dp/B08Y68HQY2/ref=sr_1_7?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=O+Diario+de+uma+quarentena&qid=1615672905&s=books&sr=1-7" class="btn btn-common">Visitar Amazon</a>
                              </div>
                         </div>
                     </div>
