--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                             </div>
                             <div class="media-body">
                                 <blockquote>Como sua mãe, fico muito feliz em ver a motivação dele, esta iniciativa surgiu de sua 
-                                    própria vontade e passamos a incentivar está escrita diária sobre os seus sentimentos durante a quarentena.
+                                    própria vontade e passamos a incentivar esta escrita diária sobre os seus sentimentos durante a quarentena.
                                     </blockquote>
                                 <h3><a href="#">- Rebeca Tárique</a></h3>
                             </div>
