--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <div class="action take-tour">
                         <div class="col-sm-7 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
                             <h1 class="title">Diário de uma Quarentena</h1>
-                            <p>O livro também encontra-se disponivel para compras &amp; leitura online na Amazon.</p>
+                            <p>O E-book também encontra-se disponivel para compras &amp; leitura online na Amazon.</p>
                         </div>
                         <div class="col-sm-5 text-center wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
                             <div class="tour-button">
