--- a/aboutus.html
+++ b/aboutus.html
@@ -107,10 +107,8 @@
                 </div>
                 <div class="col-sm-6 padding-top">
                     <p>Yalle é uma criança cheia de talentos, um amante das artes: ama animais, adora 
-                        cuidar de pessoas, gosta de música, de desenhar, teatro e toca vários instrumentos, 
-                        certamente será um multi-instrumentista, escritor, ator, médico, médico veterinário, 
-                        desenhista... São muitas as possibilidades. Afinal, como diz o poeta: “Talento é a música que 
-                        nossa alma canta e a alma do outro escuta”.
+                        cuidar de pessoas, gosta de música, de desenhar, teatro e toca vários instrumentos. 
+                        Ganhou em 1º lugar o 25º Concurso de Redação da Biblioteca Pública do Paraná.
                         </p>
                 </div>
             </div>
@@ -200,12 +198,12 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/1.jpg" class="img-responsive" alt="">
+                                            <img src="images/aboutus/10.jpeg" class="img-responsive" alt="">
                                         </div>
                                         <div class="social-profile">
                                             <ul class="nav nav-pills">
                                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                             </ul>
                                         </div>
@@ -223,7 +221,7 @@
                                         <div class="social-profile">
                                             <ul class="nav nav-pills">
                                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                             </ul>
                                         </div>
@@ -259,7 +257,7 @@
                                         <div class="social-profile">
                                             <ul class="nav nav-pills">
                                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                             </ul>
                                         </div>
