--- a/aboutus.html
+++ b/aboutus.html
@@ -75,7 +75,7 @@
                     <form role="form">
                         <i class="fa fa-search"></i>
                         <div class="field-toggle">
-                            <input type="text" class="search-form" autocomplete="off" placeholder="Search">
+                            <input type="text" class="search-form" autocomplete="off" placeholder="Buscar">
                         </div>
                     </form>
                 </div>
