--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,8 +31,8 @@
                 <div class="col-sm-12 overflow">
                    <div class="social-icons pull-right">
                         <ul class="nav nav-pills">
-                            <li><a href="https://www.facebook.com/yalletarique/"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://www.instagram.com/yalletarique/?hl=pt-br"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/yalletarique.yalletarique"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://instagram.com/yalle_tarique?igshid=1meeg8acjh2ht"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://www.google.com/?hl=pt_BR"><i class="fa fa-google-plus"></i></a></li>
                            </ul>
                     </div> 
@@ -332,7 +332,7 @@
                     <div class="contact-info bottom">
                         <h2>Contato</h2>
                         <address>
-                        E-mail: <a href="mailto:someone@example.com">producaoyalletarique@gmail.com</a> <br> 
+                        E-mail: <a href="producaoyalletarique@gmail.com">producaoyalletarique@gmail.com</a> <br> 
                         Telefone: +55 (71)99222-7144<br> 
                         </address>
 
